# concurso-rs

./: .env  .gitignore  Cargo.toml  README.md
frontend/: .gitignore  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: assuntos.ts  bancas.ts  client.ts  concursos.ts  questoes.ts
frontend/src/components/: Badge.module.css  Badge.tsx  Card.module.css  Card.tsx  Erro.module.css  Erro.tsx  Layout.module.css  Layout.tsx  Loading.module.css  Loading.tsx
frontend/src/hooks/: useFetch.ts
frontend/src/pages/: AssuntosPage.tsx  BancasPage.tsx  ConcursosPage.tsx  InicioPage.module.css  InicioPage.tsx  ListaPage.module.css  QuestoesPage.module.css  QuestoesPage.tsx
frontend/src/styles/: global.css
frontend/src/types/: index.ts
migrations/: 20260308195629_001_create_schema.sql  20260308195716_002_seed_data.sql.sql
src/: db.rs  error.rs  main.rs  models.rs
src/routes/: assuntos.rs  bancas.rs  concursos.rs  mod.rs  questoes.rs
